--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 openai>=1.0.0
 langchain>=0.1.0
-chromadb>=0.4.0
+langchain-openai>=0.0.2
+langchain-community>=0.0.10
+langchain-core>=0.1.0
+chromadb>=0.4.22
 streamlit>=1.30.0
 pypdf2>=3.0.0
 python-dotenv>=1.0.0
+tiktoken>=0.5.0
